<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".Fragments.BlankFragmentTop">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_top1"
        android:layout_width="373dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:textSize="8pt"
        android:textStyle="bold"
        tools:text="TOP1" />

    <TextView
        android:id="@+id/tv_top2"
        android:layout_width="373dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/top2"
        android:textSize="8pt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_top3"
        android:layout_width="372dp"
        android:layout_height="40dp"
        android:layout_marginTop="150dp"
        android:text="@string/top3"
        android:textSize="8pt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_top4"
        android:layout_width="372dp"
        android:layout_height="40dp"
        android:layout_marginTop="200dp"
        android:text="@string/top4"
        android:textSize="8pt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_top5"
        android:layout_width="372dp"
        android:layout_height="40dp"
        android:layout_marginTop="250dp"
        android:text="@string/top_5"
        android:textSize="8pt"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnClose"
        android:layout_width="68dp"
        android:layout_height="38dp"
        android:layout_marginLeft="295dp"
        android:layout_marginTop="5dp"

        android:text="Close" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="73dp"
        android:layout_height="35dp"
        android:layout_marginLeft="160dp"
        android:text="SCORE"
        android:textStyle="bold"
        android:textSize="20sp" />


</FrameLayout>