<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstrainLoyautOptions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    android:layout_marginBottom="0dp"
    android:padding="0dp"
    tools:context=".Activity.OptionsScreenActivity">

    <TextView
        android:id="@+id/tvType"
        android:layout_width="116dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="148dp"
        android:layout_marginBottom="8dp"
        android:paddingTop='5dp'
        android:text="@string/type"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069"
        tools:text="Game Type" />

    <TextView
        android:id="@+id/tvPlayerName"
        android:layout_width="116dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingTop='5dp'
        android:text="Player name"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGameType"
        android:layout_width="116dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:paddingTop='5dp'
        android:text="@string/game_type_"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRandom"
        android:layout_width="116dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="116dp"
        android:paddingTop='5dp'
        android:text="Random"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMusic"
        android:layout_width="116dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="220dp"
        android:paddingTop='5dp'
        android:text="Music"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonReturnToMainScreen"
        android:layout_width="80dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/return_main_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="80dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/save_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buttonReturnToMainScreen" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="231dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/radioButtonEasy"
            android:layout_width="70dp"
            android:layout_height="33dp"

            android:text="@string/easy_" />

        <RadioButton
            android:id="@+id/radioButtonMedium"
            android:layout_width="90dp"
            android:layout_height="33dp"

            android:text="@string/medium_" />

        <RadioButton
            android:id="@+id/radioButtonHard"
            android:layout_width="70dp"
            android:layout_height="33dp"

            android:text="@string/hard_" />

    </RadioGroup>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="213dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418" />

    <CheckBox
        android:id="@+id/RandmCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/random_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toEndOf="@+id/tvRandom"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198" />

    <Button
        android:id="@+id/set_default_options"
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="8dp"
        android:text="@string/set_default_options_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText

        android:id="@+id/editTexPlayer"
        android:layout_width="135dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:maxLength="15"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/add_name"
        android:inputType="textPersonName"
        android:text="@string/pysto"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="209dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305" />


</android.support.constraint.ConstraintLayout>